# ebpf-tracker

./: .dockerignore  .gitignore  AGENT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  TASKLOG.md  architechture.md  docker-compose.bpftrace.node.yml  docker-compose.bpftrace.yml  ebpf-tracker.toml.example
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
crates/ebpf-tracker-dataset/: README.md
crates/ebpf-tracker-dataset/src/: analysis.rs  lib.rs  main.rs
crates/ebpf-tracker-events/: README.md
crates/ebpf-tracker-events/src/: lib.rs
crates/ebpf-tracker-otel/: Cargo.toml  README.md  docker-compose.jaeger.yml
crates/ebpf-tracker-otel/src/: lib.rs  main.rs
crates/ebpf-tracker-perf/: Cargo.toml  README.md
crates/ebpf-tracker-perf/src/: lib.rs
crates/ebpf-tracker-viewer/: README.md
crates/ebpf-tracker-viewer/assets/: live-trace-matrix.js
crates/ebpf-tracker-viewer/demo-library/: postcard-generator-node.jsonl  postcard-generator-rust.jsonl  session-io-demo.jsonl
crates/ebpf-tracker-viewer/src/: lib.rs  main.rs
docker/: bpftrace-node.Dockerfile  bpftrace-rust.Dockerfile
docs/: cli.md  customer-ux-e2e.md  trace-payment-engine.md
examples/: README.md
examples/postcard-generator-node/: README.md  ebpf-demo.toml  ebpf-tracker.toml  package.json
examples/postcard-generator-node/input/: palette.txt
examples/postcard-generator-node/src/: generate.js
examples/postcard-generator-node/templates/: postcard.html.tpl
examples/postcard-generator-rust/: Cargo.toml  README.md  ebpf-demo.toml
examples/postcard-generator-rust/input/: message.txt  title.txt
examples/postcard-generator-rust/src/: main.rs
examples/session-io-demo/: Cargo.toml  README.md  build.rs  ebpf-demo.toml  ebpf-tracker.toml
examples/session-io-demo/input/: message.txt
examples/session-io-demo/src/: main.rs
probes/: execve.bt
scripts/: attach-smoke.sh  customer-cli-e2e.sh  customer-data-e2e.sh  customer-ux-check.sh  customer-viewer-e2e.sh  dashboard-smoke.sh  dataset-smoke.sh  exec-target-from-env.rs  live-trace-matrix.js  release-check.sh  render-trace-report.js  run-bpftrace-wrap.sh  runtime-smoke.sh
src/: attach.rs  lib.rs  main.rs  runtime.rs
subagents/: einstein-dashboard-frontend-review.md  euclid-customer-experience-review.md  euler-stream-dataset-feasibility.md  halley-repo-onboarding-summary.md  initiative-completion-audit.md  meridian-docs-audit.md
