[package]
name = "ebpf-tracker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI that wraps Rust or Node commands, runs them inside a Linux Docker runtime, and attaches bpftrace for session-based eBPF observability."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords = ["cargo", "node", "ebpf", "bpftrace", "observability"]
categories = ["command-line-utilities", "development-tools"]

[workspace]
members = [
    ".",
    "crates/ebpf-tracker-events",
    "crates/ebpf-tracker-otel",
    "crates/ebpf-tracker-perf",
    "examples/session-io-demo",
    "examples/postcard-generator-rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/givtaj/cargo-ebpf-tracker"
homepage = "https://github.com/givtaj/cargo-ebpf-tracker"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
ebpf-tracker-events = { path = "crates/ebpf-tracker-events" }
ebpf-tracker-perf = { path = "crates/ebpf-tracker-perf" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

[[bin]]
name = "eBPF_tracker"
path = "src/main.rs"
