[package]
name = "ebpf-tracker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI that wraps Rust or Node commands, runs them inside a Linux Docker runtime, and traces sessions with bpftrace or perf for session-based eBPF observability."
readme = "README.md"
repository.workspace = true
homepage.workspace = true
keywords = ["cargo", "node", "ebpf", "bpftrace", "observability"]
categories = ["command-line-utilities", "development-tools"]
publish = false

[workspace]
members = [
    ".",
    "crates/ebpf-tracker-dataset",
    "crates/ebpf-tracker-events",
    "crates/ebpf-tracker-otel",
    "crates/ebpf-tracker-perf",
    "crates/ebpf-tracker-viewer",
    "examples/session-io-demo",
    "examples/postcard-generator-rust",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/givtaj/ebpf-tracker"
homepage = "https://github.com/givtaj/ebpf-tracker"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies]
ebpf-tracker-dataset = { version = "0.1.0", path = "crates/ebpf-tracker-dataset" }
ebpf-tracker-events = { version = "0.1.0", path = "crates/ebpf-tracker-events" }
ebpf-tracker-perf = { version = "0.1.0", path = "crates/ebpf-tracker-perf" }
ebpf-tracker-viewer = { version = "0.1.0", path = "crates/ebpf-tracker-viewer" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"

[[bin]]
name = "ebpf-tracker"
path = "src/main.rs"
