[package]
name = "ebpf-tracker-otel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "OTLP and Jaeger-oriented consumer scaffold for ebpf-tracker JSONL streams"
publish = false

[dependencies]
ebpf-tracker-events = { path = "../ebpf-tracker-events" }
opentelemetry-proto = { version = "0.31", default-features = false, features = ["trace", "gen-tonic-messages"] }
prost = "0.14"
rand = "0.9"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
serde_json = { workspace = true }

[[bin]]
name = "ebpf-tracker-otel"
path = "src/main.rs"
